--- a/portfolio-1.html
+++ b/portfolio-1.html
@@ -11,25 +11,18 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Portfolio Project 1</h1>
+            <h1>React Project</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-7 col-md-7 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="images/portfolio/full/1.jpg" alt="" />
+                        <img src="images/portfolio/caremesh.com.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="images/portfolio/full/2.jpg" alt="" />
+                        <img src="images/portfolio/caremesh.com-1.png" alt="" />
                     </div>
-                    <div class="item">
-                        <img src="images/portfolio/full/3.jpg" alt="" />
-                    </div>
-                </div>
-
-                <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/97102654?autoplay=0"></iframe>
                 </div>
 
                 <!--
@@ -61,12 +54,15 @@
                     <h3>Description</h3>
                 </div>
                 <ul class="project-general-info">
-                    <li><p><i class="fa fa-user"></i> Alex Smith</p></li>
-                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i> 25 december, 2016</p></li>
+                    <li><p><i class="fa fa-user"></i> Alex A.</p></li>
+                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">https://caremesh.com</a></p></li>
+                    <li><p><i class="fa fa-calendar"></i> 15 Sept, 2016</p></li>
                 </ul>
 
-                <p class="text-justify">Aliquam euismod aliquam massa, quis eleifend dui sodales vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <p class="text-justify">I have built almost 90% of its front-end functionalities using React.js.</p>
+                <li>Seamless user interface based on the Material Design paradigm</li>
+                <li>The most secure way of handling user attributes and records</li>
+                <li>Super-responsive desktop/mobile UI layouts</li>
                 <!-- /Project Description -->
 
                 <!-- Technology -->
@@ -75,11 +71,11 @@
                         <h3>Technology</h3>
                     </div>
                     <ul class="tags">
-                        <li><a>HTML5</a></li>
-                        <li><a>CSS3</a></li>
-                        <li><a>jQuery</a></li>
-                        <li><a>Ajax</a></li>
-                        <li><a>PHP5</a></li>
+                        <li><a>React</a></li>
+                        <li><a>Material UI</a></li>
+                        <li><a>Secure Messaging</a></li>
+                        <li><a>Secure Email</a></li>
+                        <li><a>HIPAA</a></li>
                     </ul>
                 </div>
                 <!-- /Technology -->
