--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -11,25 +11,21 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Portfolio Project 3</h1>
+            <h1>Creative Idea</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-7 col-md-7 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="images/portfolio/full/3.jpg" alt="" />
+                        <img src="images/portfolio/spott.ai.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="images/portfolio/full/4.jpg" alt="" />
+                        <img src="images/portfolio/spott.ai-1.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="images/portfolio/full/5.jpg" alt="" />
+                        <img src="images/portfolio/spott.ai-2.png" alt="" />
                     </div>
-                </div>
-
-                <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/97102654?autoplay=0"></iframe>
                 </div>
 
                 <!--
@@ -61,12 +57,14 @@
                     <h3>Description</h3>
                 </div>
                 <ul class="project-general-info">
-                    <li><p><i class="fa fa-user"></i> Alex Smith</p></li>
-                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i> 25 december, 2016</p></li>
+                    <li><p><i class="fa fa-user"></i> Alex A.</p></li>
+                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">https://spott.ai/</a></p></li>
+                    <li><p><i class="fa fa-calendar"></i> 25 Feb, 2017</p></li>
                 </ul>
 
-                <p class="text-justify">Aliquam euismod aliquam massa, quis eleifend dui sodales vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <p class="text-justify">I have co-founded this platform, built the whole website and web-service from scratch using the React.js & Node.js frameworks.</p>
+                <p class="text-justify">Idea that you can see the product information while watching videos is innovative.</p>
+                <p class="text-justify">This helps you buy the product comfortably.</p>
                 <!-- /Project Description -->
 
                 <!-- Technology -->
@@ -75,11 +73,11 @@
                         <h3>Technology</h3>
                     </div>
                     <ul class="tags">
-                        <li><a>HTML5</a></li>
-                        <li><a>CSS3</a></li>
-                        <li><a>jQuery</a></li>
-                        <li><a>Ajax</a></li>
-                        <li><a>PHP5</a></li>
+                        <li><a>React</a></li>
+                        <li><a>Node.js</a></li>
+                        <li><a>CSS3/Sass</a></li>
+                        <li><a>Material UI</a></li>
+                        <li><a>Redux</a></li>   
                     </ul>
                 </div>
                 <!-- /Technology -->
