--- a/portfolio-4.html
+++ b/portfolio-4.html
@@ -11,25 +11,21 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Portfolio Project 4</h1>
+            <h1>TaskWorld</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-7 col-md-7 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="images/portfolio/full/4.jpg" alt="" />
+                        <img src="images/portfolio/taskworld.com.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="images/portfolio/full/5.jpg" alt="" />
+                        <img src="images/portfolio/taskworld.com-1.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="images/portfolio/full/6.jpg" alt="" />
+                        <img src="images/portfolio/taskworld.com-2.png" alt="" />
                     </div>
-                </div>
-
-                <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/97102654?autoplay=0"></iframe>
                 </div>
 
                 <!--
@@ -61,12 +57,13 @@
                     <h3>Description</h3>
                 </div>
                 <ul class="project-general-info">
-                    <li><p><i class="fa fa-user"></i> Alex Smith</p></li>
-                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i> 25 december, 2016</p></li>
+                    <li><p><i class="fa fa-user"></i> Alex A.</p></li>
+                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">https://caremesh.com</a></p></li>
+                    <li><p><i class="fa fa-calendar"></i> 14 Oct, 2015</p></li>
                 </ul>
 
-                <p class="text-justify">Aliquam euismod aliquam massa, quis eleifend dui sodales vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <p class="text-justify">I have taken part in Backend(80%) and Frontend(20%). And this is my first project developed by Flask.</p>
+                <p class="text-justify">I have accomplished many such projects since then.</p>
                 <!-- /Project Description -->
 
                 <!-- Technology -->
@@ -75,11 +72,11 @@
                         <h3>Technology</h3>
                     </div>
                     <ul class="tags">
-                        <li><a>HTML5</a></li>
-                        <li><a>CSS3</a></li>
-                        <li><a>jQuery</a></li>
-                        <li><a>Ajax</a></li>
-                        <li><a>PHP5</a></li>
+                        <li><a>React</a></li>
+                        <li><a>Python(Flask)</a></li>
+                        <li><a>Redux</a></li>
+                        <li><a>ChatBot</a></li>
+                        <li><a>CSS3/Sass</a></li>
                     </ul>
                 </div>
                 <!-- /Technology -->
