--- a/portfolio-7.html
+++ b/portfolio-7.html
@@ -2,8 +2,8 @@
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
             <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="portfolio-1.html"><i class="zmdi zmdi-chevron-left"></i></a>
-                <a class="ajax-page-load" href="portfolio-3.html"><i class="zmdi zmdi-chevron-right"></i></a>
+                <a class="ajax-page-load" href="portfolio-6.html"><i class="zmdi zmdi-chevron-left"></i></a>
+                <a class="ajax-page-load" href="portfolio-1.html"><i class="zmdi zmdi-chevron-right"></i></a>
             </div>
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="zmdi zmdi-close"></i></a>
@@ -11,20 +11,17 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Dark-theme Site</h1>
+            <h1>User friendly site</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-7 col-md-7 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="images/portfolio/earnyourbooze.com.png" alt="" />
+                        <img src="images/portfolio/www.ticketbud.com.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="images/portfolio/earnyourbooze.com-1.png" alt="" />
-                    </div>
-                    <div class="item">
-                        <img src="images/portfolio/earnyourbooze.com-2.png" alt="" />
+                        <img src="images/portfolio/www.ticketbud.com-1.png" alt="" />
                     </div>
                 </div>
 
@@ -58,11 +55,11 @@
                 </div>
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i> Alex A.</p></li>
-                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">https://earnyourbooze.com/</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i> 10 Mar, 2018</p></li>
+                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">https://www.ticketbud.com/</a></p></li>
+                    <li><p><i class="fa fa-calendar"></i> 15 Sept, 2019</p></li>
                 </ul>
 
-                <p class="text-justify">I have participated in both front-end (Shopify) and backend (Laravel) development of this project.</p>
+                <p class="text-justify">I have built almost 80% of its backend functionalities using PHP and ROR.</p>
                 <!-- /Project Description -->
 
                 <!-- Technology -->
@@ -71,11 +68,11 @@
                         <h3>Technology</h3>
                     </div>
                     <ul class="tags">
-                        <li><a>Shopify</a></li>
-                        <li><a>Laravel</a></li>
-                        <li><a>Html</a></li>
-                        <li><a>Jquery</a></li>
+                        <li><a>Wordpress</a></li>
+                        <li><a>PHP</a></li>
+                        <li><a>Wordpress Plugin</a></li>
                         <li><a>CSS</a></li>
+                        <li><a>RESTful API</a></li>
                     </ul>
                 </div>
                 <!-- /Technology -->
