--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -39,7 +39,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <div class="site-title">Alex <span>Smith</span></div>
+            <div class="site-title">Xin <span>Zhiguo</span></div>
           </div>
 
           <!-- Navigation -->
@@ -58,9 +58,11 @@
               <li>
                 <a class="pt-trigger" href="index.html#portfolio" data-animation="62">Portfolio</a>
               </li>
+              <!--
               <li class="active">
                 <a class="pt-trigger" href="index.html#blog" data-animation="62">Blog</a>
               </li>
+              -->
               <li>
                 <a class="pt-trigger" href="index.html#contact" data-animation="62">Contact</a>
               </li>
@@ -75,7 +77,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Alex Smith</div>
+          <div class="mobile-site-title">Xin Zhiguo</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
