--- a/portfolio-5.html
+++ b/portfolio-5.html
@@ -3,7 +3,7 @@
         <div class="ajax-page-nav">
             <div class="nav-item ajax-page-prev-next">
                 <a class="ajax-page-load" href="portfolio-4.html"><i class="zmdi zmdi-chevron-left"></i></a>
-                <a class="ajax-page-load" href="portfolio-1.html"><i class="zmdi zmdi-chevron-right"></i></a>
+                <a class="ajax-page-load" href="portfolio-6.html"><i class="zmdi zmdi-chevron-right"></i></a>
             </div>
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="zmdi zmdi-close"></i></a>
@@ -11,25 +11,21 @@
         </div>
 
         <div class="ajax-page-title">
-            <h1>Portfolio Project 5</h1>
+            <h1>Customers' need</h1>
         </div>
 
         <div class="row">
             <div class="col-sm-7 col-md-7 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="images/portfolio/full/5.jpg" alt="" />
+                        <img src="images/portfolio/thecapital.co.za.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="images/portfolio/full/6.jpg" alt="" />
+                        <img src="images/portfolio/thecapital.co.za-1.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="images/portfolio/full/7.jpg" alt="" />
+                        <img src="images/portfolio/thecapital.co.za-2.png" alt="" />
                     </div>
-                </div>
-
-                <div class="portfolio-page-video embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/97102654?autoplay=0"></iframe>
                 </div>
 
                 <!--
@@ -61,12 +57,15 @@
                     <h3>Description</h3>
                 </div>
                 <ul class="project-general-info">
-                    <li><p><i class="fa fa-user"></i> Alex Smith</p></li>
-                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i> 25 december, 2016</p></li>
+                    <li><p><i class="fa fa-user"></i> Alex A.</p></li>
+                    <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">http://thecapital.co.za/</a></p></li>
+                    <li><p><i class="fa fa-calendar"></i> 15 Nov, 2017</p></li>
                 </ul>
 
-                <p class="text-justify">Aliquam euismod aliquam massa, quis eleifend dui sodales vitae. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <p class="text-justify">Booking hotels in South Africa have never been easier. </p>
+                <p class="text-justify">This website was built for the guests and customers of The Capital hotels that are scattered through several major cities of South Africa - Sandton, Cape Town, Rosebank, etc. </p>
+                <p class="text-justify"></p>Polished workflow with both desktop and mobile responsive UIs helps people to place their booking in no time.</p>
+                <p class="text-justify">I have built this website using React.js, and its CMS using Google Firebase.</p>
                 <!-- /Project Description -->
 
                 <!-- Technology -->
@@ -75,11 +74,11 @@
                         <h3>Technology</h3>
                     </div>
                     <ul class="tags">
-                        <li><a>HTML5</a></li>
-                        <li><a>CSS3</a></li>
-                        <li><a>jQuery</a></li>
-                        <li><a>Ajax</a></li>
-                        <li><a>PHP5</a></li>
+                        <li><a>React</a></li>
+                        <li><a>Redux</a></li>
+                        <li><a>Ruby on Rails</a></li>
+                        <li><a>SEO</a></li>
+                        <li><a>CSS/LESS</a></li>
                     </ul>
                 </div>
                 <!-- /Technology -->
