--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <li><span class="title">Residence</span><span class="value">China</span></li>
                         <li><span class="title">Address</span><span class="value">Shenyang, People's Republic of China</span></li>
                         <li><span class="title">e-mail</span><span class="value"><a href="mailto:topwebfulldev@gmail.com">topwebfulldev@gmail.com</a></span></li>
-                        <li><span class="title">Phone</span><span class="value">+86 186 2408 2731 (<i class="fa fa-whatsapp"></i>)</span></li>
+                        <li><span class="title">Phone</span><span class="value">+86 186 2408 2731 <i class="fa fa-whatsapp"></i></span></li>
                         <li><span class="title">Freelance</span><span class="value available">Full-time Available</span></li>
                       </ul>
                     </div>
