--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Resume - Xin Zhiguo</title>
+  <title>Resume - Jason</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <meta name="description" content="Resume - Xin Zhiguo" />
+  <meta name="description" content="Resume - Jason" />
   <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
   <meta name="author" content="lmtheme" />
   <link rel="shortcut icon" href="favicon.ico">
@@ -79,7 +79,7 @@
     <!-- Mobile Header -->
     <div class="mobile-header mobile-visible">
       <div class="mobile-logo-container">
-        <div class="mobile-site-title">Xin Zhiguo</div>
+        <div class="mobile-site-title">Zhiguo Xin</div>
       </div>
 
       <a class="menu-toggle mobile-visible">
@@ -108,7 +108,7 @@
 
                   <div class="col-sm-8 col-md-8 col-lg-8">
                     <div class="title-block">
-                      <h1>Xin Zhiguo</h1>
+                      <h1>Zhiguo Xin</h1>
                       <div class="owl-carousel text-rotation">
                         <div class="item">
                           <div class="sp-subtitle">Backend Developer</div>
@@ -139,7 +139,7 @@
                       </div>
                       <p>
                         Hello! I’m Xin Zhiguo, a full-stack web developer.
-                        You can call me <span>Jason</span>.
+                        You can call me <span><b>Jason</b></span>.
                         As a seasoned web developer, I will help you build sophisticated web apps to boost your sales
                         and cement your reputation!
                         <hr>
@@ -167,7 +167,7 @@
 
                   <div class="col-sm-6 col-md-6 col-lg-6">
                     <ul class="info-list">
-                      <li><span class="title">Age</span><span class="value">28</span></li>
+                      <li><span class="title">Age</span><span class="age-value value"></span></li>
                       <li><span class="title">Residence</span><span class="value">China</span></li>
                       <li><span class="title">Address</span><span class="value">Shenyang, People's Republic of
                           China</span></li>
@@ -287,13 +287,13 @@
                         <!-- Experience 3 -->
                         <div class="timeline-item">
                           <h4 class="item-title">TazzerClean (Rotherham, UK)</h4>
-                          <span class="item-period">Dec 2020 - Feb 2021</span>
+                          <span class="item-period">Dec 2020 - Apr 2021</span>
                           <span class="item-small">Project manager, DevOps</span>
                           <p class="item-description">ASP.NET Core for backend API, Vue.js for frontend. My role was to
                             assign tasks to other developers and
                             to check their code, to merge, deploy the changes. I used to deploy with Azure Repos'
-                            pipelines and release. I used to work as a techincal supporter with DBMS, database
-                            structuure and project flow</p>
+                            pipelines and release. I also used to work as a techincal supporter with DBMS, database
+                            structure and project flow.</p>
                         </div>
                         <!-- / Experience 3 -->
                       </div>
