--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
                         * very creative and a fast learner🏃🏻‍ <br>
                         * willing to save your time and money💲 <br>
                         <hr>
+                        I love sharing my talents and vast coding experience with foreign companies.<br>
+                        It gives me great satisfaction to see a company gain from my experience and talents. <br>
                         Your Success is My Business with pleasure! <br>
                         Why don't you hire me to take your business to the next level?😉
                       </p>
@@ -173,6 +175,8 @@
                           China</span></li>
                       <li><span class="title">e-mail</span><span class="value"><a
                             href="mailto:topwebfulldev@gmail.com">topwebfulldev@gmail.com</a></span></li>
+                      <li><span class="title"></span><span class="value"><a
+                            href="mailto:2225051390@qq.com">2225051390@qq.com</a></span></li>
                       <li><span class="title">Phone</span><span class="value">+86 186 2408 2731 <i
                             class="fa fa-whatsapp"></i></span></li>
                       <li><span class="title">Freelance</span><span class="value available">Full-time Available</span>
@@ -629,7 +633,7 @@
 
                     <!-- Portfolio Item 1 -->
                     <figure class="item" data-groups='["all", "be"]'>
-                      <a class="ajax-page-load" href="https://www.snowfalltech.com/" target="_blank">
+                      <a href="https://www.snowfalltech.com/" target="_blank">
                         <img src="images/portfolio/snowfall.png" alt="">
                         <div>
                           <h5 class="name">Snowfall Tech</h5>
@@ -725,6 +729,19 @@
                         <div>
                           <h5 class="name">Ticketbud</h5>
                           <small>Backend</small>
+                          <i class="fa fa-file-text-o"></i>
+                        </div>
+                      </a>
+                    </figure>
+                    <!-- /Portfolio Item 7 -->
+
+                    <!-- Portfolio Item 7 -->
+                    <figure class="item" data-groups='["all", "be", "fe"]'>
+                      <a href="https://www.tazzerclean.co.uk">
+                        <img src="images/portfolio/Tazzer-Clean-UK.png" alt="">
+                        <div>
+                          <h5 class="name">TazzerClean</h5>
+                          <small>TeamLeader, DevOps</small>
                           <i class="fa fa-file-text-o"></i>
                         </div>
                       </a>
@@ -978,7 +995,8 @@
                         <i class="fa fa-envelope"></i>
                       </div>
                       <div class="ci-text">
-                        <h5>topwebfulldev@gmail.com</h5>
+                        <h5><a href="mailto:topwebfulldev@gmail.com">topwebfulldev@gmail.com</a></h5>
+                        <h5><a href="mailto:topwebfulldev@outlook.com">topwebfulldev@outlook.com</a></h5>
                       </div>
                     </div>
                     <div class="contact-info-block">
