--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="row">
                   <div class="col-sm-4 col-md-4 col-lg-4">
                     <div class="photo">
-                      <img src="images/photo.png" alt="">
+                      <img src="images/photo.png" alt="" loading="lazy">
                     </div>
                   </div>
 
@@ -753,6 +753,9 @@
                 </div>
                 <!-- /Portfolio Content -->
               </div>
+              <br>
+              <br>
+              <h4 style="text-align: center;">And many more ...</h4>
             </div>
           </section>
           <!-- /Portfolio Subpage -->
