--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                     <!-- Portfolio Item 2 -->
                     <figure class="item" data-groups='["all", "fe", "be"]'>
                       <a class="ajax-page-load" href="portfolio-2.html">
-                        <img src="images/portfolio/earnyourbooze.com.png" alt="" loading="lazy">
+                        <img src="images/portfolio/earnyourbooze.com-thumb.png" alt="" loading="lazy">
                         <div>
                           <h5 class="name">Earn your booze</h5>
                           <small>Full-stack</small>
@@ -673,7 +673,7 @@
                     <!-- Portfolio Item 3 -->
                     <figure class="item" data-groups='["all", "fe", "be"]'>
                       <a class="ajax-page-load" href="portfolio-3.html">
-                        <img src="images/portfolio/spott.ai.png" alt="" loading="lazy">
+                        <img src="images/portfolio/spott.ai-thumb.png" alt="" loading="lazy">
                         <div>
                           <h5 class="name">Spott</h5>
                           <small>Full-stack</small>
@@ -686,7 +686,7 @@
                     <!-- Portfolio Item 4 -->
                     <figure class="item" data-groups='["all", "be"]'>
                       <a class="ajax-page-load" href="portfolio-4.html">
-                        <img src="images/portfolio/taskworld.com.png" alt="" loading="lazy">
+                        <img src="images/portfolio/taskworld.com-thumb.png" alt="" loading="lazy">
                         <div>
                           <h5 class="name">TaskWorld</h5>
                           <small>Backend</small>
@@ -712,7 +712,7 @@
                     <!-- Portfolio Item 6 -->
                     <figure class="item" data-groups='["all", "fe", "be"]'>
                       <a class="ajax-page-load" href="portfolio-6.html">
-                        <img src="images/portfolio/www.estatesales.net.png" alt="" loading="lazy">
+                        <img src="images/portfolio/www.estatesales.net-thumb.png" alt="" loading="lazy">
                         <div>
                           <h5 class="name">Estate sales</h5>
                           <small>Full-stack</small>
@@ -725,7 +725,7 @@
                     <!-- Portfolio Item 7 -->
                     <figure class="item" data-groups='["all", "be"]'>
                       <a class="ajax-page-load" href="portfolio-7.html">
-                        <img src="images/portfolio/www.ticketbud.com.png" alt="" loading="lazy">
+                        <img src="images/portfolio/www.ticketbud.com-thumb.png" alt="" loading="lazy">
                         <div>
                           <h5 class="name">Ticketbud</h5>
                           <small>Backend</small>
