--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
                     <!-- Portfolio Item 1 -->
                     <figure class="item" data-groups='["all", "be"]'>
                       <a href="https://www.snowfalltech.com/" target="_blank">
-                        <img src="images/portfolio/snowfall-thumb.png" alt="">
+                        <img src="images/portfolio/snowfall-thumb.png" alt="" loading="lazy">
                         <div>
                           <h5 class="name">Snowfall Tech</h5>
                           <small>Backend-end, DevOps</small>
@@ -699,7 +699,7 @@
                     <!-- Portfolio Item 5 -->
                     <figure class="item" data-groups='["all", "fe", "be"]'>
                       <a class="ajax-page-load" href="portfolio-5.html">
-                        <img src="images/portfolio/thecapital.co.za-thumb.png" alt="">
+                        <img src="images/portfolio/thecapital.co.za-thumb.png" alt="" loading="lazy">
                         <div>
                           <h5 class="name">The Capital</h5>
                           <small>Full-stack</small>
@@ -738,7 +738,7 @@
                     <!-- Portfolio Item 7 -->
                     <figure class="item" data-groups='["all", "be", "fe"]'>
                       <a href="https://www.tazzerclean.co.uk">
-                        <img src="images/portfolio/Tazzer-Clean-UK-thumb.png" alt="">
+                        <img src="images/portfolio/Tazzer-Clean-UK-thumb.png" alt="" loading="lazy">
                         <div>
                           <h5 class="name">TazzerClean</h5>
                           <small>TeamLeader, DevOps</small>
