--- a/index.html
+++ b/index.html
@@ -268,13 +268,11 @@
 
                         <!-- Experience 2 -->
                         <div class="timeline-item">
-                          <h4 class="item-title">Snowfall Tech (London, UK)</h4>
+                          <h4 class="item-title">Parker Lane Group (London, UK)</h4>
                           <span class="item-period">Nov 2016 - Feb 2018</span>
                           <span class="item-small">Python Developer(DevOps) (remote)</span>
                           <p class="item-description">Python is all the rage in the world and its frameworks are rapidly
-                            improving and releasing. I worked as Backend developer
-                            using Python frameworks(Flask/Django). After that, I participated in developing Artificial
-                            Intelligence part.</p>
+                            improving and releasing. I worked as Backend developer and DevOps using Python frameworks(Flask/Django).</p>
                         </div>
                         <!-- / Experience 2 -->
 
