remove some contact info

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         As a seasoned web developer, I will help you build sophisticated web apps to boost your sales
                         and cement your reputation!
                         <hr>
-                        *****Why ME?*****<br>
+                        <!-- *****Why ME?*****<br>
                         As my client, I will work with you to help you meet your project goals using my years of
                         experience.
                         <br>
@@ -159,7 +159,7 @@
                         I love sharing my talents and vast coding experience with foreign companies.<br>
                         It gives me great satisfaction to see a company gain from my experience and talents. <br>
                         Your Success is My Business with pleasure! <br>
-                        Why don't you hire me to take your business to the next level?😉
+                        Why don't you hire me to take your business to the next level?😉 -->
                       </p>
                     </div>
                     <div class="download-resume">
@@ -168,7 +168,24 @@
                   </div>
 
                   <div class="col-sm-6 col-md-6 col-lg-6">
-                    <ul class="info-list">
+                    *****Why ME?*****<br>
+                    As my client, I will work with you to help you meet your project goals using my years of
+                    experience.
+                    <br>
+                    I am ... <br>
+                    * full of experiences in web development🍺 <br>
+                    * good at communication👬 <br>
+                    * easy to deal with🤗 <br>
+                    * flexible for working hours and cultures🌙 <br>
+                    * devoted team collaboration👨‍👦‍👦 <br>
+                    * very creative and a fast learner🏃🏻‍ <br>
+                    * willing to save your time and money💲 <br>
+                    <hr>
+                    I love sharing my talents and vast coding experience with foreign companies.<br>
+                    It gives me great satisfaction to see a company gain from my experience and talents. <br>
+                    Your Success is My Business with pleasure! <br>
+                    Why don't you hire me to take your business to the next level?😉  
+                    <!-- <ul class="info-list">
                       <li><span class="title">Age</span><span class="age-value value"></span></li>
                       <li><span class="title">Residence</span><span class="value">China</span></li>
                       <li><span class="title">Address</span><span class="value">Shenyang, People's Republic of
@@ -181,7 +198,7 @@
                             class="fa fa-whatsapp"></i></span></li>
                       <li><span class="title">Freelance</span><span class="value available">Full-time Available</span>
                       </li>
-                    </ul>
+                    </ul> -->
                   </div>
 
                 </div>
@@ -294,7 +311,7 @@
                           <p class="item-description">ASP.NET Core for backend API, Vue.js for frontend. My role was to
                             assign tasks to other developers and
                             to check their code, to merge, deploy the changes. I used to deploy with Azure Repos'
-                            pipelines and release. I also used to work as a techincal supporter with DBMS, database
+                            pipelines and release. I also used to work as a technical supporter with DBMS, database
                             structure and project flow.</p>
                         </div>
                         <!-- / Experience 3 -->
@@ -983,14 +1000,14 @@
                       <div id="map" class="map"></div>
                       <-- End of Google Map -->
 
-                    <div class="contact-info-block">
+                    <!-- <div class="contact-info-block">
                       <div class="ci-icon">
                         <i class="fa fa-map-marker"></i>
                       </div>
                       <div class="ci-text">
                         <h5>Shenyang, People's Republic of China</h5>
                       </div>
-                    </div>
+                    </div> -->
                     <div class="contact-info-block">
                       <div class="ci-icon">
                         <i class="fa fa-envelope"></i>
@@ -1000,14 +1017,14 @@
                         <h5><a href="mailto:topwebfulldev@outlook.com">topwebfulldev@outlook.com</a></h5>
                       </div>
                     </div>
-                    <div class="contact-info-block">
+                    <!-- <div class="contact-info-block">
                       <div class="ci-icon">
                         <i class="fa fa-phone"></i>
                       </div>
                       <div class="ci-text">
                         <h5>+86 186 2408 2731 (<i class="fa fa-whatsapp"></i>)</h5>
                       </div>
-                    </div>
+                    </div> -->
                     <div class="contact-info-block">
                       <div class="ci-icon">
                         <i class="fa fa-check"></i>
