--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
                         <h3>About <span>Me</span></h3>
                       </div>
                       <p>
-                        Hello! I’m Xin Zhiguo, a full-stack web developer.
-                        You can call me <span><b>Jason</b></span>.
+                        Hello! I am Jason, a full-stack developer.
                         As a seasoned web developer, I will help you build sophisticated web apps to boost your sales
                         and cement your reputation!
                         <hr>
