--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header id="site_header" class="header mobile-menu-hide">
       <div class="header-content">
         <div class="site-title-block mobile-hidden">
-          <div class="site-title">Xin <span>Zhiguo</span></div>
+          <div class="site-title">Jason <span>Xin</span></div>
         </div>
 
         <!-- Navigation -->
@@ -138,9 +138,14 @@
                         <h3>About <span>Me</span></h3>
                       </div>
                       <p>
-                        Hello! I am Jason, a full-stack developer.
+                        Hello! I am Jason, a full-stack developer focused on frontend development.
                         As a seasoned web developer, I will help you build sophisticated web apps to boost your sales
-                        and cement your reputation!
+                        and cement your reputation!<br><br>
+                        Currently I am working with new AI products DALL-E2 and GPT-4 from 
+                        <a href="https://openai.com/">openai.com</a> and it attracts me day by day.<br>
+                        And I still love blockchain projects (DApp, DAO, DeFi) despite the 'crypto winter'.<br>
+                        I just came back from a long-time vacation and I am fully available now.
+
                         <hr>
                         <!-- *****Why ME?*****<br>
                         As my client, I will work with you to help you meet your project goals using my years of
