contact info updated

--- a/index.html
+++ b/index.html
@@ -1004,14 +1004,14 @@
                       <div id="map" class="map"></div>
                       <-- End of Google Map -->
 
-                    <!-- <div class="contact-info-block">
+                    <div class="contact-info-block">
                       <div class="ci-icon">
                         <i class="fa fa-map-marker"></i>
                       </div>
                       <div class="ci-text">
-                        <h5>Shenyang, People's Republic of China</h5>
+                        <h5>Apartment 2, 88 North king Street Dublin 7 D07 X2E5, Ireland</h5>
                       </div>
-                    </div> -->
+                    </div>
                     <div class="contact-info-block">
                       <div class="ci-icon">
                         <i class="fa fa-envelope"></i>
@@ -1021,14 +1021,14 @@
                         <h5><a href="mailto:topwebfulldev@outlook.com">topwebfulldev@outlook.com</a></h5>
                       </div>
                     </div>
-                    <!-- <div class="contact-info-block">
+                    <div class="contact-info-block">
                       <div class="ci-icon">
                         <i class="fa fa-phone"></i>
                       </div>
                       <div class="ci-text">
-                        <h5>+86 186 2408 2731 (<i class="fa fa-whatsapp"></i>)</h5>
+                        <h5>+1 (470) 557 1441 (<i class="fa fa-whatsapp"></i>)</h5>
                       </div>
-                    </div> -->
+                    </div>
                     <div class="contact-info-block">
                       <div class="ci-icon">
                         <i class="fa fa-check"></i>
