--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header id="site_header" class="header mobile-menu-hide">
       <div class="header-content">
         <div class="site-title-block mobile-hidden">
-          <div class="site-title">Jason <span>Xin</span></div>
+          <div class="site-title">Jason <span>O'Mellan</span></div>
         </div>
 
         <!-- Navigation -->
@@ -79,7 +79,7 @@
     <!-- Mobile Header -->
     <div class="mobile-header mobile-visible">
       <div class="mobile-logo-container">
-        <div class="mobile-site-title">Jason Xin</div>
+        <div class="mobile-site-title">Jason O'Mellan</div>
       </div>
 
       <a class="menu-toggle mobile-visible">
@@ -108,7 +108,7 @@
 
                   <div class="col-sm-8 col-md-8 col-lg-8">
                     <div class="title-block">
-                      <h1>Jason Xin</h1>
+                      <h1>Jason O'Mellan</h1>
                       <div class="owl-carousel text-rotation">
                         <div class="item">
                           <div class="sp-subtitle">Backend Developer</div>
