--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -39,7 +39,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <div class="site-title">Xin <span>Zhiguo</span></div>
+            <div class="site-title">Jason <span>O'Mellan</span></div>
           </div>
 
           <!-- Navigation -->
@@ -77,7 +77,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Xin Zhiguo</div>
+          <div class="mobile-site-title">Jason O'Mellan</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
